--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "compression-webpack-plugin": "^3.1.0",
     "consola": "^2.11.3",
+    "copy-webpack-plugin": "^6.0.3",
     "css-loader": "^3.4.2",
     "dotenv": "^8.2.0",
     "eslint": "^6.8.0",
@@ -104,6 +105,7 @@
     "single-spa": "^5.3.3",
     "single-spa-vue": "^1.8.2",
     "systemjs-webpack-interop": "^2.0.0",
+    "tinymce": "^5.4.0",
     "vue": "2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-giant-tree": "^0.1.2",
